Add more functionality

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,4 +45,4 @@ install(TARGETS ${LIBNAME} LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX})
 install(TARGETS change_resolutions_test RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX})
 
 # Clean target
-set_directory_properties(PROPERTIES ADDITIONAL_MAKE_CLEAN_FILES "${CMAKE_BINARY_DIR}/*.so*;${CMAKE_BINARY_DIR}/*.o;${CMAKE_BINARY_DIR}/change_resolutions_test")
+set_directory_properties(PROPERTIES ADDITIONAL_MAKE_CLEAN_FILES "${CMAKE_BINARY_DIR}/*.so*;${CMAKE_BINARY_DIR}/*.o")
