Optimize the build steps

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,21 +1,23 @@
 cmake_minimum_required(VERSION 3.10)
 
-# Project name
 project(ds-hal VERSION 0.0 LANGUAGES C CXX)
 
 # Set the library name
 set(LIBNAME ds-hal)
-set(LIBNAMEFULL lib${LIBNAME}.so)
-set(DSHAL_API_MAJOR_VERSION 0)
-set(DSHAL_API_MINOR_VERSION 0)
-set(VERSION ${DSHAL_API_MAJOR_VERSION}.${DSHAL_API_MINOR_VERSION})
-set(LIBSOM ${LIBNAMEFULL}.${DSHAL_API_MAJOR_VERSION})
-set(LIBSOV ${LIBNAMEFULL}.${VERSION})
 
-# Source files
+set(DEFAULT_BUILD_TYPE "Release")
+
+if(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
+	message(STATUS "Setting build type to '${DEFAULT_BUILD_TYPE}' as none was specified.")
+	set(CMAKE_BUILD_TYPE "${DEFAULT_BUILD_TYPE}" CACHE STRING "Choose the type of build." FORCE)
+	set_property(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS "Debug" "Release" "MinSizeRel" "RelWithDebInfo")
+endif()
+
+include(GNUInstallDirs)
+
+# All source files
 file(GLOB SOURCES "*.c")
 
-# Include directories
 include_directories(/usr/include/interface/vmcs_host/linux)
 
 # Compiler flags
@@ -23,9 +25,15 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1y -g -fPIC -D_REENTRANT -Wall -
 
 # Create the shared library
 add_library(${LIBNAME} SHARED ${SOURCES})
+set_target_properties(${LIBNAME} PROPERTIES
+	VERSION ${PROJECT_VERSION}
+	SOVERSION ${PROJECT_VERSION}
+)
 target_link_libraries(${LIBNAME} vchostif vchiq_arm vcos asound)
 
-# Change resolution executable
+# Target executable
+set(BINNAME change_resolutions_test)
+
 find_package(PkgConfig REQUIRED)
 pkg_check_modules(LIBDRM REQUIRED libdrm)
 
@@ -37,12 +45,15 @@ include_directories(${LIBDRM_INCLUDE_DIRS})
 link_directories(${LIBDRM_LIBRARY_DIRS})
 add_definitions(${LIBDRM_CFLAGS_OTHER})
 
-add_executable(change_resolutions_test change_resolution.c)
-target_link_libraries(change_resolutions_test ${LIBDRM_LIBRARIES})
+add_executable(${BINNAME} change_resolution.c)
+target_link_libraries(${BINNAME} ${LIBDRM_LIBRARIES})
 
 # Installation
-install(TARGETS ${LIBNAME} LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX})
-install(TARGETS change_resolutions_test RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX})
+install(TARGETS ${LIBNAME} LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})
+install(TARGETS ${BINNAME} RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
 
 # Clean target
-set_directory_properties(PROPERTIES ADDITIONAL_MAKE_CLEAN_FILES "${CMAKE_BINARY_DIR}/*.so*;${CMAKE_BINARY_DIR}/*.o")
+add_custom_target(clean-all
+    COMMAND ${CMAKE_BUILD_TOOL} clean
+    COMMAND rm -rf CMakeCache.txt CMakeFiles cmake_install.cmake Makefile
+)
