Add Git SHA in logging

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,6 +31,21 @@ else()
 	message(FATAL_ERROR "DRI_CARD is not set")
 endif()
 
+# Add GIT version to the compile flags
+execute_process(
+	COMMAND git rev-parse --short HEAD
+	WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+	OUTPUT_VARIABLE GIT_SHA
+	OUTPUT_STRIP_TRAILING_WHITESPACE
+)
+
+if (NOT GIT_SHA STREQUAL "")
+	message(STATUS "GIT_SHA is set to ${GIT_SHA}")
+	add_definitions(-DGIT_SHA=\"${GIT_SHA}\")
+else()
+	message(STATUS "GIT_SHA is not set")
+endif()
+
 # Compiler flags , add security flags as well
 set(SECURITY_CFLAGS "-fstack-protector-strong -D_FORTIFY_SOURCE=2 -Wformat -Wformat-security -fPIE -pie -Wl,-z,relro -Wl,-z,now")
 # Set compiler flags, including the security flags
